2007-08-31  Craig Ruff <cruff@ucar.edu>

	* ftpclass.cc: handle 125 reply as 150.

2007-08-23  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: don't use put_ll_timer in ascii mode.

2007-08-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: wait for 150 reply before accessing data socket.
	* SFtp.cc: limit upload packet size.

2007-08-06  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.h: fix compilation without iconv.

2007-08-02  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, NetAccess.cc, NetAccess.h: increment retries on
	  soft transfer errors which do not cause disconnect; check retry
	  count before re-starting transfer.
	* FileCopy.cc: increment saved retry count before next try.

2007-06-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc: (CharsetValidate) return error without iconv.
	* buffer.cc, buffer.h: nicer conditionals.

2007-06-15  Jakob Truelsen <antialize@gmail.com>

	* ResMgr.cc, SFtp.cc, buffer.cc, buffer.h: allow compilation without iconv.

2007-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* url.cc: encode non-ascii chars.

2007-04-06  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: don't add extra \001 for readline prompt.

2007-04-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.h, FileCopy.cc, FileCopy.h, FileSet.cc, FileSet.h,
	  FileSetOutput.cc, Filter.cc, Filter.h, MirrorJob.cc, NetAccess.cc:
	  (FileTimestamp) new struct; use it where needed; submit even
	  imprecise timestamp from MirrorJob to CopyJob.

2007-03-26  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: prevent double-delete of args in LocalDirList
	  (reported by Liu Yubao <yubao.liu@gmail.com>)
	* pgetJob.cc: fixed core dump when target directory is not writable
	  (reported by Justin Piszcz <jpiszcz@lucidpixels.com>).

2007-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: -p option has priority over the url.
