@@ -1,3 +1,7 @@
+2007-09-24  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ftpclass.cc: fix for non-standard FEAT reply.
+
 2007-08-31  Craig Ruff <cruff@ucar.edu>
 
 	* ftpclass.cc: handle 125 reply as 150.
